# SyncNode-Backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_project_version.py
app/: main.py
app/api/: __init__.py  dependencies.py  lifespan.py
app/api/endpoints/: __init__.py  auth.py  default.py
app/api/endpoints/v1/: __init__.py  auth.py  mvp.py  notes.py  sync.py  users.py
app/core/: __init__.py  config.py  logger.py  logger_config.py  security.py
app/database/core/: __init__.py  database.py  redis.py  sync.py  sync_adapter.py
app/database/migrations/: env.py
app/database/migrations/versions/: 6073ebcb9704_init_schema.py  6c1c59e0e369_fix_error_on_relationship.py  f7000e747b75_fix_errors.py
app/database/models/: __init__.py  models.py
app/schemas/: __init__.py  auth.py  default_schema.py  notes.py
app/static/: sync_test.html
