[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "SyncNode-Backend"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httptools>=0.8.0",
    "pycrdt>=0.14.1",
    "pycrdt-websocket>=0.16.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "uvloop>=0.22.1",
    "websockets>=16.1",
]

[tool.hatch.build.targets.wheel]
packages = ["admin", "api", "common"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
